--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -30,12 +30,29 @@
       <div class="form-group">
         <label for="genres">Genres</label>
         <small>Ctrl+Click to select multiple</small>
-        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', id=form.genres, autofocus = true) }}
+        {{ form.genres(class_ = 'form-control', placeholder='Genres, separated by commas', autofocus = true) }}
       </div>
       <div class="form-group">
-          <label for="facebook_link">Facebook Link</label>
-          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', id=form.facebook_link, autofocus = true) }}
+          <label for="website">Web Site</label>
+          {{ form.website(class_ = 'form-control', placeholder='http://', autofocus = true) }}
         </div>
+      <div class="form-group">
+          <label for="image_link">Image Link</label>
+          {{ form.image_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+      <div class="form-group">
+          <label for="facebook_link">Facebook Link</label>
+          {{ form.facebook_link(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+      <div class="form-group">
+          <label for="seeking_talent">Seeking for a talent</label>
+          {{ form.seeking_talent(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+        </div>
+      <div class="form-group">
+          <label for="seeking_description">Seeking description</label>
+          {{ form.seeking_description(class_ = 'form-control', placeholder='Enter a summary...', autofocus = true) }}
+        </div>
+      
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
     </form>
   </div>
