--- a/templates/forms/new_venue.html
+++ b/templates/forms/new_venue.html
@@ -46,7 +46,7 @@
         </div>
       <div class="form-group">
           <label for="seeking_talent">Seeking for a talent</label>
-          {{ form.seeking_talent(class_ = 'form-control', placeholder='http://', autofocus = true) }}
+          {{ form.seeking_talent(class_ = 'form-control', autofocus = true) }}
         </div>
       <div class="form-group">
           <label for="seeking_description">Seeking description</label>
