--- a/templates/forms/new_show.html
+++ b/templates/forms/new_show.html
@@ -3,6 +3,7 @@
 {% block content %}
   <div class="form-wrapper">
     <form method="post" class="form">
+		{{ form.csrf_token }}
       <h3 class="form-heading">List a new show</h3>
       <div class="form-group">
         <label for="artist_id">Artist ID</label>
@@ -19,6 +20,16 @@
           {{ form.start_time(class_ = 'form-control', placeholder='YYYY-MM-DD HH:MM', autofocus = true) }}
         </div>
       <input type="submit" value="Create Venue" class="btn btn-primary btn-lg btn-block">
+		
+      {% if form.errors %}
+			<ul class="errors">
+				{% for field_name, field_errors in form.errors|dictsort if field_errors %}
+					{% for error in field_errors %}
+						<li>{{ form[field_name].label }}: {{ error }}</li>
+					{% endfor %}
+				{% endfor %}
+			</ul>
+		{% endif %}
     </form>
   </div>
 {% endblock %}
